--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,6 +89,11 @@ img {
   padding-inline: 1rem;
 }
 
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
 /*=============== STYLE SWITCHER ===============*/
 
 /*=============== HEADER & NAV ===============*/
@@ -97,7 +102,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background-color: var(--container-color);
+  background-color: var(--body-color);
   box-shadow: 0 3px 9px hsla(0, 0, 0, 0.05);
 }
 
@@ -117,15 +122,144 @@ img {
   font-size: var(--h2-font-size);
 }
 
+.nav__list {
+  column-gap: 1.5rem;
+}
+
+.nav__link {
+  color: var(--title-color);
+  transition: all .3s ease;
+}
+
 /* Active link */
+
+.active-link,
+.nav__link:hover {
+  color: var(--first-color);
+}
 
 /*=============== HOME ===============*/
 
+.home {
+  background-color: var(--container-color);
+  padding-block: 9rem 3rem;
+}
+
+.home__container {
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+
+.home__small {
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-600);
+  letter-spacing: 1px;
+}
+
+.home__title {
+  font-size: var(--big-font-size);
+  line-height: 1.4;
+}
+
+.home__title span {
+  font-weight: var(--weight-300);
+}
+
+.home__description {
+  margin-block: 1.5rem 3rem;
+}
+
+.home__btns {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.btn {
+  display: inline-block;
+  background-color: var(--first-color);
+  border: 1px solid var(--first-color);
+  color: var(--white);
+  padding: .9rem 2.5rem;
+  font-size: var(--large-font-size);
+  border-radius: .5rem;
+  transition: all .5s ease;
+}
+
+.btn--transparent {
+  background-color: transparent;
+  color: var(--first-color);
+}
+
+.home__img-wrapper {
+  margin-inline: auto 2rem;
+  position: relative;
+}
+
+.home__img-wrapper::before, 
+.home__img-wrapper::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+}
+
+.home__img-wrapper::before {
+  background-color: var(--first-color-light);
+  animation: animate__before 8s ease-in-out infinite;
+}
+
+.home__img-wrapper::after {
+  background-color: var(--first-color);
+}
+
+.home__img-wrapper::after,
+.home__img {
+  animation: animate__after 8s ease-in-out infinite;
+}
+
+.home__img {
+  z-index: 10;
+  position: relative;
+  vertical-align: middle;
+}
+
 /* Home animation */
+
+@keyframes animate__before {
+  0%{
+    border-radius: 65% 35% 29% 71% / 55% 30% 70% 45% ;
+  }
+  50%{
+    border-radius: 21% 79% 50% 50% / 21% 50% 50% 79% ;
+  }
+  100%{
+    border-radius: 65% 35% 29% 71% / 55% 30% 70% 45% ;
+  }
+}
+
+@keyframes animate__after {
+  0%{
+    border-radius: 21% 79% 50% 50% / 21% 50% 50% 79% ;
+  }
+  50%{
+    border-radius: 65% 35% 29% 71% / 55% 30% 70% 45% ;
+  }
+  100%{
+    border-radius: 21% 79% 50% 50% / 21% 50% 50% 79% ;
+  }
+}
 
 /*=============== BUTTON ===============*/
 
 /* Button hover */
+
+.btn:hover {
+  background-color: var(--first-color-dark);
+}
+
+.btn--transparent:hover {
+  background-color: var(--first-color);
+  color: var(--white);
+}
 
 /*=============== ABOUT ===============*/
 
