--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,9 +7,9 @@
 
   /*========== Colors ==========*/
   /* Color mode HSL(hue, saturation, lightness) */
-  --first-color: hsl(268, 77%, 58%);
-  --first-color-dark: hsl(268, 78%, 51%);
-  --first-color-light: hsl(268, 100%, 83%);
+  --first-color: hsl(230, 77%, 58%);
+  --first-color-dark: hsl(230, 78%, 51%);
+  --first-color-light: hsl(230, 100%, 83%);
   --title-color: hsl(0, 0%, 87%);
   --text-color: hsl(0, 0%, 69%);
   --body-color: hsl(200, 12%, 5%);
@@ -92,6 +92,33 @@ img {
 .grid {
   display: grid;
   gap: 1.5rem;
+}
+
+.section {
+  padding-block: 6rem;
+}
+
+.section__title {
+  font-size: var(--h1-font-size);
+  font-weight: var(--weight-400);
+  line-height: 1.2;
+  margin-bottom: 1.5rem;
+}
+
+.section__title::before {
+  content: attr(data-title);
+  display: block;
+  color: var(--first-color);
+  font-size: var(--larger-font-size);
+  font-weight: var(--weight-600);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: .5rem;
+}
+
+.title-center {
+  text-align: center;
+  margin-bottom: 3rem;
 }
 
 /*=============== STYLE SWITCHER ===============*/
@@ -263,15 +290,285 @@ img {
 
 /*=============== ABOUT ===============*/
 
+.about__container {
+  grid-template-columns: 4fr 8fr;
+  align-items: center;
+}
+
+.about__image-wrapper {
+  position: relative;
+  height: 400px;
+}
+
+.about__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  object-fit: cover;
+  transition: all .3s ease;
+}
+
+.about__img:nth-child(1) {
+  clip-path: polygon(0 0, 0 32%, 28% 0);
+  transform: translateY(-1.5rem);
+}
+
+.about__img:nth-child(2) {
+  clip-path: polygon(28% 0, 0 32%, 0 100%, 17% 100%, 90% 0);
+  transform: translateY(-0.75rem);
+}
+
+.about__img:nth-child(3) {
+  clip-path: polygon(100% 0, 100% 65%, 74% 100%, 17% 100%, 90% 0);
+  transform: translateY(-0.25rem);
+}
+
+.about__img:nth-child(4) {
+  clip-path: polygon(100% 65%, 74% 100%, 100% 100%);
+  transform: translateY(0.25rem);
+}
+
 /* About img hover */
+
+.about__image-wrapper:hover .about__img {
+  transform: translateY(0);
+}
+
+/* about description */
+
+.about__description {
+  border-bottom: 1px solid var(--border-color);
+  margin-bottom: 2rem;
+}
+
+.about__data {
+  grid-template-columns: repeat(2, 1fr);
+  gap: .25rem;
+  margin-bottom: 3rem;
+}
+
+.data__item {
+  display: flex;
+  column-gap: .75rem;
+}
+
+.data__title {
+  font-size: var(--larger-font-size);
+}
+
+.about__link {
+  color: hsla(225, 73%, 57%);
+}
+
+.about__bottom,
+.about__social-links {
+  display: flex;
+  align-items: center;
+}
+
+.about__bottom {
+  column-gap: 3rem;
+}
+
+.about__social-links {
+  column-gap: 1.25rem;
+}
+
+.about__social-links::before {
+  content: '';
+  background-color: var(--text-color);
+  width: 60px;
+  height: 2px;
+}
+
+.about__social-link {
+  color: var(--text-color);
+  transition: all .3s ease;
+}
+
+.about__social-link:hover {
+  color: var(--first-color);
+}
 
 /*=============== QUALIFICATION ===============*/
 
+.qualification {
+  background-color: var(--container-color);
+}
+
+.resume__container {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.resume__heading {
+  text-align: center;
+  font-size: var(--h3-font-size);
+  padding-bottom: 2rem;
+}
+
+.resume__heading,
+.resume__item {
+  border-bottom: 2px solid var(--border-color);
+}
+
+.resume__item:not(:first-child) {
+  border-right: 2px solid var(--border-color);
+}
+
+.resume__item {
+  position: relative;
+}
+
+.resume__header {
+  padding: 2rem 1.5rem;
+}
+
+.resume__subtitle {
+  font-size: var(--larger-font-size);
+  cursor: pointer;
+}
+
+.resume__icon {
+  font-size: var(--h2-font-size);
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: var(--container-color);
+  border: 2px solid var(--border-color);
+  line-height: 1.1;
+  text-align: center;
+  cursor: pointer;
+  position: absolute;
+  right: -1.5rem;
+  bottom: -1.5rem;
+  z-index: 10;
+}
+
+.resume__content {
+  padding-inline: 1.5rem 3rem;
+}
+
+.resume__date-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.resume__title {
+  font-size: var(--h3-font-size);
+}
+
+.resume__date {
+  color: var(--title-color);
+  font-size: var(--large-font-size);
+}
+
+.resume__description {
+   margin-block: 1.25rem 2rem;
+}
+
 /*=============== SERVICES ===============*/
+
+.services__container {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.services__item {
+  position: relative;
+  background-color: var(--container-color);
+  border: 1px solid var(--container-color);
+  padding: 2.5rem 1.8rem;
+  border-radius: .5rem;
+  transition: all .5s ease;
+}
 
 /* Services hover */
 
+.services__item:hover {
+  background-color: var(--body-color);
+  border-color: var(--border-color);
+}
+
+.services__icon {
+  color: var(--first-color);
+  font-size: 1.8rem;
+}
+
+.services__title {
+  font-size: var(--h3-font-size);
+  margin-block: 1.5rem 1rem;
+}
+
+.services__no {
+  position: absolute;
+  right: 2.5rem;
+  top: 1rem;
+  color: var(--title-color);
+  font-size: 3.75rem;
+  opacity: 0.07;
+}
+
 /*=============== SKILLS ===============*/
+
+.skills {
+  background-color: var(--container-color);
+}
+
+.skills__container {
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 4rem;
+}
+
+.skills__titles {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.skills__titles,
+.skills__description {
+  padding-inline: 1.5rem;
+}
+
+.skills__name {
+  font-size: var(--larger-font-size);
+}
+
+.skills__no {
+  color: var(--title-color);
+  font-size: var(--large-font-size);
+  font-weight: var(--weight-600);
+}
+
+.skills__description {
+  margin-block: 1rem 1.8rem;
+}
+
+.skills__bar,
+.skills__percentage {
+  height: 2px;
+}
+
+.skills__bar {
+  background-color: var(--border-color)
+}
+
+.skills__percentage {
+  background-color: var(--first-color);
+  position: relative;
+}
+
+.skills__percentage span {
+  background-color: var(--container-color);
+  border: 2px solid var(--border-color);
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: -0.75rem;
+}
 
 /*=============== PORTFOLIO ===============*/
 
