Fin de la Section "works"

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,7 +130,8 @@ img {
   left: 0;
   width: 100%;
   background-color: var(--body-color);
-  box-shadow: 0 3px 9px hsla(0, 0, 0, 0.05);
+  box-shadow: 0 3px 9px hsla(0, 0%, 0%, 0.05);
+  z-index: 100;
 }
 
 .nav,
@@ -572,9 +573,104 @@ img {
 
 /*=============== PORTFOLIO ===============*/
 
+.work__container {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.work__card {
+  position: relative;
+  cursor: pointer;
+}
+
+.work__img {
+  vertical-align: middle;
+}
+
+.work__details {
+  position: absolute;
+  inset: 0;
+  background-color: hsla(0, 0%, 0%, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: all .4s ease-in-out;
+}
+
+.work__img,
+.work__details {
+  border-radius: .5rem;
+}
+
+.work__title {
+  font-size: var(--h3-font-size);
+}
+
+.work__title,
+.work__description {
+  color: var(--white);
+  transform: translateY(1.5rem);
+  transition: all .3s ease-in-out;
+}
+
+.work__description {
+  font-size: var(--large-font-size);
+}
+
 /* Work hover */
 
+.work__card:hover .work__details {
+  opacity: 1;
+}
+
+.work__card:hover :is(.work__title, .work__description) {
+  transform: translateY(0);
+}
+
 /*=============== TESTIMONIALS ===============*/
+
+.testimonials {
+  background-color: var(--container-color);
+}
+
+.testimonials__container {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.testimonials__description {
+  margin-bottom: 1.75rem;
+}
+
+.testimonials__description::before {
+  content: '\f10d';
+  font-family: fontawsome;
+  display: block;
+  color: var(--first-color);
+  font-size: var(--h3-font-size);
+  margin-bottom: .25rem;
+}
+
+.testimonials__data {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+
+.testimonials__img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.testimonials__name {
+  font-size: var(--larger-font-size);
+}
+
+.testimonials__identity {
+  font-size: var(--large-font-size);
+}
 
 /*=============== CONTACT ===============*/
 
