--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,12 +34,23 @@
 }
 
 /*=============== DARK THEME ===============*/
+#day-night:checked ~ * {
+  --title-color: hsl(247, 27%, 31%);
+  --text-color: hsl(0, 0%, 41%);
+  --body-color: hsl(0, 0%, 100%);
+  --container-color: hsl(266, 78%, 98%);
+  --border-color: hsl(0, 0%, 87%);
+}
 
 /*=============== BASE ===============*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 input,
@@ -50,7 +61,7 @@ body {
   font-size: var(--larger-font-size);
 }
 
-body {
+main {
   background-color: var(--body-color);
   color: var(--text-color);
 }
@@ -122,6 +133,189 @@ img {
 }
 
 /*=============== STYLE SWITCHER ===============*/
+input[type='radio'],
+input[type='checkbox'] {
+  display: none;
+}
+
+.style__switcher {
+  position: fixed;
+  right: 0;
+  bottom: 20%;
+  padding: 1rem;
+  width: 220px;
+  border: 1px solid var(--border-color);
+  background-color: var(--container-color);
+  border-radius: .5rem;
+  z-index: 300;
+  transform: translateX(100%);
+  transition: all .3s ease;
+}
+
+#toggler:checked ~ .style__switcher {
+  transform: translateX(0);
+}
+
+.style__switcher-toggler,
+.style__switcher-theme {
+  position: absolute;
+  right: 110%;
+  color: var(--title-color);
+  background-color: var(--body-color);
+  border: 1px solid var(--border-color);
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  transition: all .3s ease;
+}
+
+.style__switcher-toggler {
+  top: 7%;
+}
+
+.style__switcher-theme {
+  bottom: 7%;
+}
+
+.style__switcher-theme .fa-moon {
+  display: none;
+}
+
+#day-night:checked ~ * .fa-sun {
+  display: none;
+}
+
+#day-night:checked ~ * .fa-moon {
+  display: block;
+}
+
+.style__switcher-title {
+  font-size: var(--large-font-size);
+  margin-bottom: .75rem;
+}
+
+.style__switcher-colors {
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  gap: .5rem;
+}
+
+#day-night:checked ~ * .fa-moon {
+  display: block;
+}
+
+.style__switcher-colors .color {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+
+.color-1 {
+  background-color: hsl(230, 78%, 51%);
+}
+
+.color-2 {
+  background-color: hsl(351, 85%, 55%);
+}
+
+.color-3 {
+  background-color: hsl(271, 76%, 53%);
+}
+
+.color-4 {
+  background-color: hsl(225, 73%, 57%);
+}
+
+.color-5 {
+  background-color: hsl(43, 74%, 49%);
+}
+
+.color-6 {
+  background-color: hsl(339, 81%, 66%);
+}
+
+.color-7 {
+  background-color: hsl(80, 61%, 50%);
+}
+
+.color-8 {
+  background-color: hsl(19, 96%, 52%);
+}
+
+.color-9 {
+  background-color: hsl(88, 65%, 43%);
+}
+
+.color-10 {
+  background-color: hsl(42, 100%, 50%);
+}
+
+#color-1:checked ~ * {
+  --first-color: hsl(230, 77%, 58%);
+  --first-color-dark: hsl(231, 39%, 29%);
+  --first-color-light: hsl(230, 100%, 83%);
+}
+
+#color-2:checked ~ * {
+  --first-color: hsl(351, 85%, 51%);
+  --first-color-dark: hsl(351, 75%, 51%);
+  --first-color-light: hsl(351, 100%, 83%);
+}
+
+#color-3:checked ~ * {
+  --first-color: hsl(271, 76%, 53%);
+  --first-color-dark: hsl(271, 60%, 53%);
+  --first-color-light: hsl(271, 100%, 83%);
+}
+
+#color-4:checked ~ * {
+  --first-color: hsl(225, 73%, 57%);
+  --first-color-dark: hsl(225, 63%, 57%);
+  --first-color-light: hsl(225, 100%, 83%);
+}
+
+#color-5:checked ~ * {
+  --first-color: hsl(43, 74%, 51%);
+  --first-color-dark: hsl(43, 64%, 49%);
+  --first-color-light: hsl(43, 100%, 83%);
+}
+
+#color-6:checked ~ * {
+  --first-color: hsl(339, 81%, 66%);
+  --first-color-dark: hsl(339, 71%, 66%);
+  --first-color-light: hsl(339, 100%, 83%);
+}
+
+#color-7:checked ~ * {
+  --first-color: hsl(80, 61%, 50%);
+  --first-color-dark: hsl(80, 51%, 50%);
+  --first-color-light: hsl(80, 100%, 83%);
+}
+
+#color-8:checked ~ * {
+  --first-color: hsl(19, 96%, 52%);
+  --first-color-dark: hsl(19, 86%, 52%);
+  --first-color-light: hsl(19, 100%, 83%);
+}
+
+#color-9:checked ~ * {
+  --first-color: hsl(88, 65%, 43%);
+  --first-color-dark: hsl(88, 55%, 43%);
+  --first-color-light: hsl(88, 100%, 83%);
+}
+
+#color-10:checked ~ * {
+  --first-color: hsl(42,100%, 50%);
+  --first-color-dark: hsl(42, 85%, 50%);
+  --first-color-light: hsl(42, 100%, 83%);
+}
+
+
+
+
 
 /*=============== HEADER & NAV ===============*/
 .header {
@@ -157,6 +351,10 @@ img {
 .nav__link {
   color: var(--title-color);
   transition: all .3s ease;
+}
+
+.nav__toggle {
+  display: none;
 }
 
 /* Active link */
@@ -643,11 +841,11 @@ img {
 }
 
 .testimonials__description::before {
-  content: '\f10d';
+  content: " \201C ";
   font-family: fontawsome;
   display: block;
   color: var(--first-color);
-  font-size: var(--h3-font-size);
+  font-size: 5rem;
   margin-bottom: .25rem;
 }
 
@@ -674,23 +872,299 @@ img {
 
 /*=============== CONTACT ===============*/
 
+.contact__container {
+  grid-template-columns: 5fr 7fr;
+  align-items: flex-start;
+}
+
+.contact__item {
+  display: flex;
+  align-items: flex-start;
+  column-gap: 1.25rem;
+}
+
+.contact__item:not(:last-child) {
+  margin-bottom: 2.5rem;
+}
+
+.contact__icon {
+  color: var(--first-color);
+  font-size: var(--large-font-size);
+  line-height: 1.8;
+}
+
+.contact__title {
+  font-size: var(--larger-font-size);
+}
+
+.contact__data {
+  font-size: var(--large-font-size);
+}
+
+.form__group {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1.25rem;
+}
+
+.input__control {
+  color: var(--title-color);
+  background-color: var(--container-color);
+  padding: 0.9rem .75rem;
+  width: 100%;
+  border-radius: .5rem;
+  margin-bottom: 1.25rem;
+}
+
+.textarea {
+  height: 140px;
+  resize: none;
+}
+
+.contact__btn {
+  float: right;
+}
 /*=============== FOOTER ===============*/
+
+.footer {
+  background-color: var(--container-color);
+  padding-block: 3rem;
+}
+
+.footer__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__copyright {
+  color: var(--text-color);
+}
+
+.footer__social-links {
+  display: flex;
+  column-gap: 1.25rem;
+}
+
+.footer__social-link {
+  color: var(--text-color);
+  font-size: var(--large-font-size);
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+
+  :root {
+    --big-font-size: 2.5rem;
+    --h1-font-size: 2rem;
+    --h2-font-size: 1.75rem;
+    --h3-font-size: 1.25rem;
+    --larger-font-size: 1rem;
+    --large-font-size: .938rem;
+  }
+
+  .home__img {
+    width: 340px;
+  }
+
+  .about__img-wrapper {
+    width: 320px;
+  }
+
+  .resume__icon {
+    line-height: 1.4;
+  }
+
+  .services__icon {
+    font-size: 1.5rem;
+  }
+
+  .Services_no {
+    font-size: 2.5rem;
+  }
+
+  .services__title {
+    margin-block: 1.25rem .75rem;
+  }
+
+  .style__switcher {
+    width: 200px;
+  }
+
+  .style__switcher-colors .color {
+    width: 24px;
+    height: 24px;
+  }
+
+  .style__switcher-toggler,
+  .style__switcher-theme {
+    width: 40px;
+    height: 40px;
+  }
+
+  .style__switcher-toggler {
+    top: 10%;
+  }
+
+  .style__switcher-theme {
+    bottom: 10%;
+  }
 }
 
 @media screen and (max-width: 992px) {
+  .container {
+    max-width: 720px;
+  }
+
+  .home__container,
+  .about__container,
+  .resume__container,
+  .testimonials__container,
+  .contact__container {
+    grid-template-columns: 1fr;
+  }
+
+  .home__content {
+    order: 1;
+  }
+
+  .home__img-wrapper {
+    margin-inline: auto;
+  }
+
+  .about__container,
+  .contact__container {
+    row-gap: 2rem;
+  }
+
+  .about__img:not(:first-child) {
+    display: none;
+  }
+
+  .about__img:first-child {
+    clip-path: initial;
+    transform: initial;
+    left: 50%;
+    translate: -50%;
+  }
+
+  .services__container,
+  .skills__container,
+  .work__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .testimonials__container,
+  .resume__container {
+    row-gap: 2.5rem;
+  }
 }
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+
+  .nav {
+    height: calc(var(--header-height)+1rem);
+  }
+
+  .nav__list {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: var(--body-color);
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    row-gap: .75rem;
+    max-height: 0;
+    overflow: hidden;
+    transition: all .3s ease;
+  }
+
+  .nav__toggle {
+    display: block;
+    color: var(--text-color);
+    font-size: 1.3rem;
+  }
+
+  #nav-toggler:checked ~ .nav__list {
+    max-height: 500px;
+    padding: 1.75rem;
+  }
+
+  .home__img {
+    width: 300px;
+  }
 }
 
 /* For small devices */
 @media screen and (max-width: 576px) {
+  .home {
+    padding-top: 7rem;
+  }
+
+  .section {
+    padding-block: 4rem;
+  }
+
+  .resume__icon {
+    display: none;
+  }
+
+  .services__container,
+  .skills__container,
+  .work__container,
+  .form__group {
+    grid-template-columns: 1fr;
+  }
+
+  .footer__container {
+    flex-direction: column;
+    row-gap: 1rem;
+  }
 }
 
 @media screen and (max-width: 450px) {
+  .about__data {
+    grid-template-columns: 1fr;
+  }
+
+  .about__bottom,
+  .resume__date-title {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .about__bottom {
+    row-gap: 1.25rem;
+  }
+
+  .about__bottom btn {
+    order: 1;
+  }
+
+  .resume__date-title {
+    row-gap: .25rem;
+  }
+
+  .resume__header,
+  .skills__titles,
+  .skills__description {
+    padding-inline: 1rem;
+  }
+  
+  .resume__content {
+    padding-inline: 1rem 1.5rem;
+  }
+
+  .services__item {
+    padding: 2rem 1.5rem;
+  }
 }
